{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 70,
  "lineage": "480770e7-e195-8049-79fa-7af443f62435",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "path_based_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:010526272542:targetgroup/dev-chapi-ecs-service/4afea1150ea36032",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010526272542:listener-rule/app/chapi-ecs-test/0cd0c4ede43dc1f8/8f247840d5c5ea5a/f3a67ef8288ce940",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010526272542:listener-rule/app/chapi-ecs-test/0cd0c4ede43dc1f8/8f247840d5c5ea5a/f3a67ef8288ce940",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:010526272542:listener/app/chapi-ecs-test/0cd0c4ede43dc1f8/8f247840d5c5ea5a",
            "priority": 100,
            "tags": null,
            "tags_all": {
              "epi:team": "quality-engineering"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.ecs_execution_role",
            "aws_iam_role.ecs_task_role",
            "aws_security_group.ecs_task_security_group",
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_listener.http",
            "module.alb.aws_alb_listener.https_acm_certs",
            "module.alb.aws_alb_listener.https_non_acm_certs",
            "module.alb.aws_lb_listener_certificate.certs",
            "module.alb.aws_security_group.alb",
            "module.alb.aws_security_group_rule.allow_all_outbound",
            "module.alb.aws_security_group_rule.http_listeners",
            "module.alb.aws_security_group_rule.http_listeners_for_security_groups",
            "module.alb.aws_security_group_rule.https_listeners_acm_certs",
            "module.alb.aws_security_group_rule.https_listeners_acm_certs_for_security_groups",
            "module.alb.aws_security_group_rule.https_listeners_non_acm_certs",
            "module.alb.aws_security_group_rule.https_listeners_non_acm_certs_for_security_groups",
            "module.alb.data.aws_acm_certificate.additional_certs",
            "module.alb.data.aws_acm_certificate.certs",
            "module.alb.data.aws_subnet.this",
            "module.alb.null_resource.dependency_getter",
            "module.fargate_service.aws_lb_target_group.ecs_service",
            "module.fargate_service.null_resource.dependency_getter"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526272542:security-group/sg-064586ab836717bdc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-064586ab836717bdc",
            "ingress": [],
            "name": "chapi-ecs-sg-us-east-1-dev",
            "name_prefix": "",
            "owner_id": "010526272542",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "epi:team": "quality-engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a51eb1b61b77c3f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_inbound_on_container_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2984307424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064586ab836717bdc",
            "security_group_rule_id": "sgr-03c07b652cef30570",
            "self": false,
            "source_security_group_id": "sg-0585d50de40222a43",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_task_security_group",
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_subnet.this",
            "module.alb.null_resource.dependency_getter"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-919698243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-064586ab836717bdc",
            "security_group_rule_id": "sgr-0e80468fb2b7917f4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_task_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526272542:subnet/subnet-0300b030453b1b9f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 1019,
            "cidr_block": "172.31.96.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0300b030453b1b9f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010526272542",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "chapi-dev-public-subnet-1",
              "epi:team": "quality-engineering"
            },
            "vpc_id": "vpc-06a51eb1b61b77c3f"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-chapi-alb-logs",
                "enabled": true,
                "prefix": "chapi-ecs-test"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010526272542:loadbalancer/app/chapi-ecs-test/0cd0c4ede43dc1f8",
            "arn_suffix": "app/chapi-ecs-test/0cd0c4ede43dc1f8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "chapi-ecs-test-1695034060.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:010526272542:loadbalancer/app/chapi-ecs-test/0cd0c4ede43dc1f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chapi-ecs-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0585d50de40222a43"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0300b030453b1b9f9"
              },
              {
                "subnet_id": "subnet-05104820e71ece7a7"
              }
            ],
            "subnets": [
              "subnet-0300b030453b1b9f9",
              "subnet-05104820e71ece7a7"
            ],
            "tags_all": {
              "epi:team": "quality-engineering"
            },
            "vpc_id": "vpc-06a51eb1b61b77c3f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_subnet.this",
            "module.alb.null_resource.dependency_getter"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010526272542:listener/app/chapi-ecs-test/0cd0c4ede43dc1f8/8f247840d5c5ea5a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010526272542:listener/app/chapi-ecs-test/0cd0c4ede43dc1f8/8f247840d5c5ea5a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:010526272542:loadbalancer/app/chapi-ecs-test/0cd0c4ede43dc1f8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "epi:team": "quality-engineering"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.alb",
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_subnet.this",
            "module.alb.null_resource.dependency_getter"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526272542:security-group/sg-0585d50de40222a43",
            "description": "For the chapi-ecs-test-alb ALB.",
            "egress": [],
            "id": "sg-0585d50de40222a43",
            "ingress": [],
            "name": "chapi-ecs-test-alb",
            "name_prefix": "",
            "owner_id": "010526272542",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "epi:team": "quality-engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a51eb1b61b77c3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.data.aws_subnet.this",
            "module.alb.null_resource.dependency_getter"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3895766722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0585d50de40222a43",
            "security_group_rule_id": "sgr-0697cfd40b926fcb6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_subnet.this",
            "module.alb.null_resource.dependency_getter"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_listeners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1402693095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0585d50de40222a43",
            "security_group_rule_id": "sgr-0d0b4b3119713374b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_subnet.this",
            "module.alb.null_resource.dependency_getter"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010526272542:targetgroup/dev-chapi-ecs-service/4afea1150ea36032",
            "arn_suffix": "targetgroup/dev-chapi-ecs-service/4afea1150ea36032",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010526272542:targetgroup/dev-chapi-ecs-service/4afea1150ea36032",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-chapi-ecs-service",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "epi:team": "quality-engineering"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06a51eb1b61b77c3f"
          },
          "dependencies": [
            "aws_iam_role.ecs_execution_role",
            "aws_iam_role.ecs_task_role",
            "aws_security_group.ecs_task_security_group",
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_listener.http",
            "module.alb.aws_alb_listener.https_acm_certs",
            "module.alb.aws_alb_listener.https_non_acm_certs",
            "module.alb.aws_lb_listener_certificate.certs",
            "module.alb.aws_security_group.alb",
            "module.alb.aws_security_group_rule.allow_all_outbound",
            "module.alb.aws_security_group_rule.http_listeners",
            "module.alb.aws_security_group_rule.http_listeners_for_security_groups",
            "module.alb.aws_security_group_rule.https_listeners_acm_certs",
            "module.alb.aws_security_group_rule.https_listeners_acm_certs_for_security_groups",
            "module.alb.aws_security_group_rule.https_listeners_non_acm_certs",
            "module.alb.aws_security_group_rule.https_listeners_non_acm_certs_for_security_groups",
            "module.alb.data.aws_acm_certificate.additional_certs",
            "module.alb.data.aws_acm_certificate.certs",
            "module.alb.data.aws_subnet.this",
            "module.alb.null_resource.dependency_getter",
            "module.fargate_service.null_resource.dependency_getter"
          ]
        }
      ]
    }
  ]
}